infra/core-infra/kubernetes/base/shared/landing-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: uniz-landing-backend-svc
spec:
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
---
apiVersion: v1
kind: Endpoints
metadata:
  name: uniz-landing-backend-svc
subsets:
  - addresses:
      - ip: 76.13.241.174
    ports:
      - port: 8000
