infra/core-infra/kubernetes/base/shared/postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: uniz-postgres
spec:
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
---
apiVersion: v1
kind: Endpoints
metadata:
  name: uniz-postgres
subsets:
  - addresses:
      - ip: 76.13.241.174
    ports:
      - port: 5432
